src/interpreter/snapshots/inlyne__interpreter__tests__bare_link_gets_autolinked.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\nIn a paragraph https://example.org\n\n- In a list https://example.org\n\n\n --- html\n\n<p>In a paragraph <a href=\"https://example.org\">https://example.org</a></p>\n<ul>\n<li>In a list <a href=\"https://example.org\">https://example.org</a></li>\n</ul>\n"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            texts: [
                Text {
                    text: "In a paragraph ",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: "https://example.org",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("https://example.org"),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "· ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "In a list ",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: "https://example.org",
                    color: Some(Color { r: 0.09, g: 0.13, b: 1.00 }),
                    link: Some("https://example.org"),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
