src/interpreter/snapshots/inlyne__interpreter__tests__nested_ordered_list.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n1. 1st outer\n    1. 1st inner\n2. 2nd outer\n\n\n --- html\n\n<ol>\n<li>1st outer\n<ol>\n<li>1st inner</li>\n</ol>\n</li>\n<li>2nd outer</li>\n</ol>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st outer",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: " ",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 100.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st inner",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "2. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "2nd outer",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
