src/interpreter/snapshots/inlyne__interpreter__tests__ordered_list_in_unordered.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n- bullet\n    1. 1st inner\n- bullet\n\n\n --- html\n\n<ul>\n<li>bullet\n<ol>\n<li>1st inner</li>\n</ol>\n</li>\n<li>bullet</li>\n</ul>\n"
expression: interpret_md(text)
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "· ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "bullet",
                    default_color: Color(BLACK),
                    ..
                },
                Text {
                    text: " ",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 100.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st inner",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "· ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "bullet",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
