src/interpreter/snapshots/inlyne__interpreter__tests__para_in_ordered_list.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n1. 1st item\n\n    Nested paragraph\n\n2. 2nd item\n\n\n --- html\n\n<ol>\n<li>\n<p>1st item</p>\n<p>Nested paragraph</p>\n</li>\n<li>\n<p>2nd item</p>\n</li>\n</ol>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "1. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "1st item",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "Nested paragraph",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            indent: 50.0,
            texts: [
                Text {
                    text: "2. ",
                    default_color: Color(BLACK),
                    style: BOLD ,
                    ..
                },
                Text {
                    text: "2nd item",
                    default_color: Color(BLACK),
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
