src/interpreter/snapshots/inlyne__interpreter__tests__yaml_frontmatter.snap
---
source: src/interpreter/tests.rs
description: " --- md\n\n---\ndate: 2018-05-01\ntags:\n  - another tag\n---\n# Markdown h1 header\n\n\n --- html\n\n<table>\n<thead>\n<tr>\n<th align=\"center\">date</th>\n<th align=\"center\">tags</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td align=\"center\">2018-05-01</td>\n<td align=\"center\">{Skipped nested table}</td>\n</tr>\n</tbody>\n</table>\n<h1>Markdown h1 header</h1>\n"
expression: "interpret_md_with_opts(text, opts)"
---
[
    Spacer(
        InvisibleSpacer(5),
    ),
    Table(
        Table {
            headers: [
                TextBox {
                    align: Center,
                    texts: [
                        Text {
                            text: "date",
                            default_color: Color(BLACK),
                            style: BOLD ,
                            ..
                        },
                    ],
                    ..
                },
                TextBox {
                    align: Center,
                    texts: [
                        Text {
                            text: "tags",
                            default_color: Color(BLACK),
                            style: BOLD ,
                            ..
                        },
                    ],
                    ..
                },
            ],
            rows: [
                [
                    TextBox {
                        align: Center,
                        texts: [
                            Text {
                                text: "2018-05-01",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                    TextBox {
                        align: Center,
                        texts: [
                            Text {
                                text: "{Skipped nested table}",
                                default_color: Color(BLACK),
                                ..
                            },
                        ],
                        ..
                    },
                ],
            ],
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
    TextBox(
        TextBox {
            font_size: 32.0,
            is_anchor: Some("#markdown-h1-header"),
            texts: [
                Text {
                    text: "Markdown h1 header",
                    default_color: Color(BLACK),
                    style: BOLD UNDERLINED ,
                    ..
                },
            ],
            ..
        },
    ),
    Spacer(
        InvisibleSpacer(5),
    ),
]
